<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/verify_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".ui.main.verify.VerifyFragment">

    <TextView
        android:id="@+id/ver_fiscalCodeInput_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp"
        android:ems="5"
        android:text="@string/fiscal_code_short_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ver_fiscalCodeInput_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toEndOf="@id/ver_fiscalCodeInput_label"
        android:autofillHints="@string/sample_fiscal_code"
        android:hint="@string/sample_fiscal_code"
        android:inputType="text"
        android:textAllCaps="true">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/ver_first_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_fiscalCodeInput_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:ems="5"
        android:text="@string/first_name_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ver_first_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_fiscalCodeInput_input"
        android:layout_toEndOf="@id/ver_first_name_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/first_name_example"
        android:inputType="textPersonName"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/ver_last_name_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_first_name_input"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:ems="5"
        android:text="@string/last_name_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/ver_last_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_first_name_input"
        android:layout_toEndOf="@id/ver_last_name_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/last_name_example"
        android:inputType="textPersonName"
        android:paddingBottom="10dp" />

    <TextView
        android:id="@+id/ver_gender_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_last_name_input"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:ems="5"
        android:text="@string/gender_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <RadioGroup
        android:id="@+id/ver_radioGroup"
        android:layout_width="227dp"
        android:layout_height="34dp"
        android:layout_below="@id/ver_last_name_input"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_toEndOf="@id/ver_gender_label"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent">

        <RadioButton
            android:id="@+id/ver_maleRadioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_male" />

        <RadioButton
            android:id="@+id/ver_femaleRadioButton"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/gender_female" />
    </RadioGroup>

    <TextView
        android:id="@+id/ver_dob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_gender_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="28dp"
        android:ems="7"
        android:text="@string/dob_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ver_dob_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_gender_label"
        android:layout_marginTop="26dp"
        android:layout_toEndOf="@id/ver_dob_label"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/dateOfBirth_hint"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <TextView
        android:id="@+id/ver_pob_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_dob_label"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:ems="7"
        android:text="@string/pob_label"
        android:textSize="18sp"
        android:textStyle="bold" />

    <AutoCompleteTextView
        android:id="@+id/ver_pob_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_dob_input"
        android:layout_marginTop="16dp"
        android:layout_toEndOf="@id/ver_pob_label"
        android:ems="10"
        android:hint="@string/placeOfBirth_hint"
        android:imeOptions="actionDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0" />

    <ImageButton
        android:id="@+id/verify_reset_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_pob_input"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="20dp"
        android:layout_toStartOf="@+id/verify_button"
        android:contentDescription="@string/reset_button"
        android:src="@drawable/ic_replay_24px" />

    <Button
        android:id="@+id/verify_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ver_pob_input"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@color/button"
        android:text="@string/verify_button"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/ver_fiscalCodeOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/verify_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text=""
        android:textColor="@color/black"
        android:textSize="20sp" />

</RelativeLayout>